crates/rome_diagnostics/tests/macros/severity_lit_str.stderr
error: failed to parse "diagnostic" attribute: expected identifier
 --> tests/macros/severity_lit_str.rs:4:25
  |
4 | #[diagnostic(severity = "Error")]
  |                         ^^^^^^^
