crates/rome_diagnostics/tests/macros/severity_lit_str.rs
use rome_diagnostics::v2::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(severity = "Error")]
struct TestDiagnostic {}

fn main() {}
